# c2rust

./: CLAUDE.md  Cargo.toml  README.md
c2rust/: Cargo.toml
c2rust-ast-exporter/src/: AstExporter.cpp  ast_tags.hpp
c2rust-bitfields/src/: lib.rs
c2rust-transpile/: Cargo.toml
c2rust-transpile/src/: convert_type.rs  diagnostics.rs  kernel_idioms.rs  lib.rs
c2rust-transpile/src/c_ast/: conversion.rs  iterators.rs  mod.rs  print.rs
c2rust-transpile/src/cfg/: mod.rs
c2rust-transpile/src/translator/: assembly.rs  builtins.rs  comments.rs  functions.rs  literals.rs  mod.rs  named_references.rs  operators.rs  pointers.rs  structs_unions.rs  variadic.rs
c2rust-transpile/tests/: module_paths.rs  snapshots.rs
tests/unit/ints/src/: test_volatile.rs
