[workspace]
resolver = "2"
# Trimmed to only what this project's own tooling actually invokes
# (scripts/run_c2rust_baseline.py, scripts/investigate_c2rust_failure.py
# only ever call `c2rust transpile`) -- confirmed via grep, 2026-07-18,
# zero references anywhere to refactor/analyze/pdg/instrument. Excluded
# crates (c2rust-analyze, c2rust-refactor, dynamic_instrumentation, pdg)
# have no dependency FROM c2rust/c2rust-transpile/c2rust-ast-exporter
# (confirmed via grep of their Cargo.toml files), so removing them from
# the workspace doesn't change the transpile path at all -- only build
# time and repo footprint (~6.5MB of source, plus their own dependency
# trees, no longer built by a plain `cargo build --release`).
members = [
    "analysis/runtime",
    "c2rust",
    "c2rust-asm-casts",
    "c2rust-ast-builder",
    "c2rust-ast-exporter",
    "c2rust-ast-printer",
    "c2rust-bitfields",
    "c2rust-bitfields-derive",
    "c2rust-build-paths",
    "c2rust-macros",
    "c2rust-rust-tools",
    "c2rust-transpile",
]
exclude = [
    "analysis/tests",
    "c2rust-analyze",
    "c2rust-refactor",
    "dynamic_instrumentation",
    "examples",
    "pdg",
    "tests",
    "tools",
]

[workspace.package]
version = "0.22.1"
authors = ["The C2Rust Project Developers <c2rust@immunant.com>"]
edition = "2021"
rust-version = "1.67"
readme = "README.md"
homepage = "https://c2rust.com/"
repository = "https://github.com/immunant/c2rust/"
license = "BSD-3-Clause"
keywords = ["transpiler", "migration", "translation", "c"]
categories = ["development-tools", "development-tools::ffi", "command-line-utilities"]

[profile.dev.package."*"]
opt-level = 3
